--- a/web/menu.html
+++ b/web/menu.html
@@ -30,7 +30,7 @@ Author URL: https://tonykidd.com
 				<span class="menu"> </span>
 				<ul>
 					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="products.html">menu</a></li>
+					<li><a href="menu.html">menu</a></li>
 					<li><a href="about.html">about</a></li>
 					<li><a href="contact.html">Contact</a></li>
 					<div class="clearfix"> </div>
