--- a/web/index.html
+++ b/web/index.html
@@ -48,7 +48,7 @@ Author URL: https://tonykidd.com
 
 				<!-- logo -->
 				<div class="logo">
-					<a href="index.html"><img src="images/logo1.png" height="300px" width="300px" title="The Dinner Table" /></a>
+					<a href="index.html"><img src="images/dinner.png" height="245px" width="400px" title="The Dinner Table" /></a>
 				</div>
 				<!-- logo -->
 			</div>
@@ -84,7 +84,7 @@ Author URL: https://tonykidd.com
 					    <div  id="top" class="callbacks_container">
 					      <ul class="rslides" id="slider4">
 					        <li>
-					          <img  src="images/dinner9.jpg" class="img-responsive" alt="">
+					          <img  src="images/food35.jpg" class="img-responsive" alt="">
 					          <div class="slider-caption">
 					          	 <div class="slider-caption-left text-center">
 					          	 	<h1>BREAKFAST, LUNCH, & DINNER.</h1>
@@ -111,7 +111,7 @@ Author URL: https://tonykidd.com
 					          <!-- share-on -->
 					        </li>
 					         <li>
-					          <img  src="images/dinner7.jpg" class="img-responsive" alt="">
+					          <img  src="images/food2.jpg" class="img-responsive" alt="">
 					          <div class="slider-caption">
 					          	 <div class="slider-caption-left text-center">
 					          	 	<h1>BREAKFAST, LUNCH, & DINNER.</h1>
@@ -138,7 +138,7 @@ Author URL: https://tonykidd.com
 					          <!-- share-on -->
 					        </li>
 					        <li>
-					          <img src="images/dinner8.jpg" class="img-responsive" alt="">
+					          <img src="images/food21.jpg" class="img-responsive" alt="">
 					           <div class="slider-caption">
 					          	 <div class="slider-caption-left text-center">
 					          	 	<h1>BREAKFAST, LUNCH, & DINNER.</h1>
@@ -165,7 +165,61 @@ Author URL: https://tonykidd.com
 					          <!-- share-on -->
 					        </li>
 					        <li>
-					          <img src="images/dinner10.jpg" class="img-responsive" alt="">
+					          <img src="images/food6.jpg" class="img-responsive" alt="">
+					           <div class="slider-caption">
+					            <div class="slider-caption-left text-center">
+					          	 	<h1>BREAKFAST, LUNCH, & DINNER.</h1>
+					          	 	<p>ALWAYS SOMETHING DIFFERENT!</p>
+					          	 </div>
+					          	  <div class="slider-caption-right">
+					          	  </div>
+					          	  <div class="clearfix"> </div>
+					          </div>
+					           <!-- share-on -->
+					          <div class="share-on">
+					          	<div class="share-on-grid">
+					          		<div class="share-on-grid-left">
+					          			<h3>Share On</h3>
+					          		</div>
+					          		<div class="share-on-grid-right">
+					          			<a href="#"><span class="facebook"> </span></a>
+					          			<div class="clearfix"> </div>
+					          		</div>
+					          		<div class="clearfix"> </div>
+					          	</div>
+					          	<div class="clearfix"> </div>
+					          </div>
+					          <!-- share-on -->
+					        </li>
+							<li>
+					          <img src="images/food22.jpg" class="img-responsive" alt="">
+					           <div class="slider-caption">
+					            <div class="slider-caption-left text-center">
+					          	 	<h1>BREAKFAST, LUNCH, & DINNER.</h1>
+					          	 	<p>ALWAYS SOMETHING DIFFERENT!</p>
+					          	 </div>
+					          	  <div class="slider-caption-right">
+					          	  </div>
+					          	  <div class="clearfix"> </div>
+					          </div>
+					           <!-- share-on -->
+					          <div class="share-on">
+					          	<div class="share-on-grid">
+					          		<div class="share-on-grid-left">
+					          			<h3>Share On</h3>
+					          		</div>
+					          		<div class="share-on-grid-right">
+					          			<a href="#"><span class="facebook"> </span></a>
+					          			<div class="clearfix"> </div>
+					          		</div>
+					          		<div class="clearfix"> </div>
+					          	</div>
+					          	<div class="clearfix"> </div>
+					          </div>
+					          <!-- share-on -->
+					        </li>
+							<li>
+					          <img src="images/food3.jpg" class="img-responsive" alt="">
 					           <div class="slider-caption">
 					            <div class="slider-caption-left text-center">
 					          	 	<h1>BREAKFAST, LUNCH, & DINNER.</h1>
@@ -202,10 +256,10 @@ Author URL: https://tonykidd.com
 			<div class="container">
 				<div class="col-md-4 top-grid">
 					<div class="top-grid-head">
-						<h3>OUR BUFFET</h3>
+						<h3>ENTREE</h3>
 					</div>
 					<div class="top-grid-info">
-						<img src="images/dinner1.jpg" class="img-responsive" title="name"/>
+						<img src="images/food30.jpg" class="img-responsive" title="name"/>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
 						<span>$15</span>
 						<div class="clearfix"> </div>
@@ -213,10 +267,10 @@ Author URL: https://tonykidd.com
 				</div>
 				<div class="col-md-4 top-grid">
 					<div class="top-grid-head">
-						<h3>OUR BUFFET</h3>
+						<h3>ENTREE</h3>
 					</div>
 					<div class="top-grid-info">
-						<img src="images/din22.jpg" class="img-responsive" title="name"/>
+						<img src="images/food1.jpg" class="img-responsive" title="name"/>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
 						<span>$20</span>
 						<div class="clearfix"> </div>
@@ -224,10 +278,10 @@ Author URL: https://tonykidd.com
 				</div>
 				<div class="col-md-4 top-grid">
 					<div class="top-grid-head">
-						<h3>OUR BUFFET</h3>
+						<h3>ENTREE</h3>
 					</div>
 					<div class="top-grid-info">
-						<img src="images/dinner6.jpg" class="img-responsive" title="name"/>
+						<img src="images/food26.jpg" class="img-responsive" title="name"/>
 						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
 						<span>$10</span>
 						<div class="clearfix"> </div>
@@ -246,23 +300,23 @@ Author URL: https://tonykidd.com
 			<div class="container">
 				<div class="col-md-8 bottom-grid-left">
 					<div class="col-md-3 bottom-grid-left-grid text-center">
-						<img src="images/dinner111.jpg" title="name"/>
-						<h4>Pecan Pie</h4>
+						<img src="images/food9.jpg" title="name"/>
+						<h4>Lorem Ipsum</h4>
 						<p></p>
 					</div>
 					<div class="col-md-3 bottom-grid-left-grid text-center">
-						<img src="images/dinner121.jpg" title="name"/>
-						<h4>Single Serve Plate</h4>
+						<img src="images/food14.jpg" title="name"/>
+						<h4>Lorem Ipsum</h4>
 						<p></p>
 					</div>
 					<div class="col-md-3 bottom-grid-left-grid text-center">
-						<img src="images/dinner33.jpg" title="name"/>
-						<h4>Whole Desserts</h4>
+						<img src="images/food33.jpg" title="name"/>
+						<h4>Lorem Ipsum</h4>
 						<p></p>
 					</div>
 					<div class="col-md-3 bottom-grid-left-grid text-center">
-						<img src="images/dinner44.jpg" title="name"/>
-						<h4>Cake Slices</h4>
+						<img src="images/food28.jpg" title="name"/>
+						<h4>Lorem Ipsum</h4>
 						<p></p>
 					</div>
 					<div class="clearfix"> </div>
@@ -281,17 +335,17 @@ Author URL: https://tonykidd.com
 			<div class="footer-top">
 				<div class="col-md-3 location">
 					<h4>location</h4>
-					<p>201 Lane Pkwy, Shelbyville, TN 37160</p>
+					<p>821 West Church St, Lexington, TN 38351</p>
 					<h4>hours</h4>
-					<p>Sunday 10AM-2PM</p>
-					<p>Monday	6AM–2PM</p>
-					<p>Tuesday-Saturday 6AM-8PM</p>
+					<p>Sunday 7AM-3PM</p>
+					<p>Monday-Thursday	7AM–8PM</p>
+					<p>Friday-Saturday 7AM-9PM</p>
 				</div>
 				<div class="col-md-3 customer">
 					<h4>customer service</h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod. </p>
 					<h4>phone</h4>
-					<h6>(931) 684-5663</h6>
+					<h6>(731) 798-5040</h6>
 					<h4>contact us</h4>
 					<h6>contact us page.</h6>
 				</div>
@@ -303,7 +357,7 @@ Author URL: https://tonykidd.com
 					</div>
 				</div>
 				<div class="col-md-3 sign">
-					<a href="index.html"><img src="images/logo1.png" height="300px" width="300px" title="The Dinner Table" /></a>
+					<a href="index.html"><img src="images/dinner.png" height="225px" width="300px" title="The Dinner Table" /></a>
 				</div>
 					<div class="clearfix"> </div>
 			</div>
