--- a/web/contact.html
+++ b/web/contact.html
@@ -48,7 +48,7 @@ Author URL: https://tonykidd.com
 
 				<!-- logo -->
 				<div class="logo">
-					<a href="index.html"><img src="images/logo1.png" height="300px" width="300px" title="The Dinner Table" /></a>
+					<a href="index.html"><img src="images/dinner.png" height="245px" width="400px" title="The Dinner Table" /></a>
 				</div>
 				<!-- logo -->
 			</div>
@@ -120,17 +120,17 @@ Author URL: https://tonykidd.com
 			<div class="footer-top">
 				<div class="col-md-3 location">
 					<h4>location</h4>
-					<p>201 Lane Pkwy, Shelbyville, TN 37160</p>
+					<p>821 West Church St, Lexington, TN 38351</p>
 					<h4>hours</h4>
-					<p>Sunday 10AM-2PM</p>
-					<p>Monday	6AM–2PM</p>
-					<p>Tuesday-Saturday 6AM-8PM</p>
+					<p>Sunday 7AM-3PM</p>
+					<p>Monday-Thursday	7AM–8PM</p>
+					<p>Friday-Saturday 7AM-9PM</p>
 				</div>
 				<div class="col-md-3 customer">
 					<h4>customer service</h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod. </p>
 					<h4>phone</h4>
-					<h6>(931) 684-5663</h6>
+					<h6>(731) 798-5040</h6>
 					<h4>contact us</h4>
 					<h6>contact us page.</h6>
 				</div>
@@ -142,7 +142,7 @@ Author URL: https://tonykidd.com
 					</div>
 				</div>
 				<div class="col-md-3 sign">
-					<a href="index.html"><img src="images/logo1.png" height="300px" width="300px" title="The Dinner Table" /></a>
+					<a href="index.html"><img src="images/dinner.png" height="225px" width="300px" title="The Dinner Table" /></a>
 				</div>
 					<div class="clearfix"> </div>
 			</div>
