--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,32 @@ Author URL: https://tonykidd.com
 	<body>
 	<!-- container -->
 		<!-- top-header -->
+		<div class="top-header">
+			<div class="container">
+				<div class="top-header-left">
+					<ul>
+						<li></li>
+						<li><a href="#"></a></li>
+						<div class="clearfix"> </div>
+					</ul>
+				</div>
+				<div class="top-header-center">
+					<p><span class="cart"> </span><label></label></p>
+				</div>
+				<div class="top-header-right">
+					<ul>
+						<li>
+							<form>
+							</form>
+							
+						</li>
+						<li></li>
+						<li></li>
+					</ul>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+		</div>
 		<!-- /top-header -->
 		<!-- main-menu -->
 		<div class="main-menu">
@@ -48,7 +74,7 @@ Author URL: https://tonykidd.com
 
 				<!-- logo -->
 				<div class="logo">
-					<a href="index.html"><img src="images/dinner.png" height="245px" width="400px" title="The Dinner Table" /></a>
+					<a href="index.html"><img src="images/dindin.png"  title="The Dinner Table" /></a>
 				</div>
 				<!-- logo -->
 			</div>
