--- a/web/contact.html
+++ b/web/contact.html
@@ -15,6 +15,7 @@ Author URL: https://tonykidd.com
    		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</script>
+		<link rel="shortcut icon" href="images/dindin.png" type="image/x-icon" />
 		<!----webfonts--->
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,700,800,400,600' rel='stylesheet' type='text/css'>
 		<!---//webfonts--->
@@ -173,7 +174,7 @@ Author URL: https://tonykidd.com
 					<div class="clearfix"> </div>
 			</div>
 			<div class="footer-bottom">
-				<p>Website by <a href="https://tonykidd.com" target="_blank"> Kidd Web Design & Development</a></p>
+				Copyright &copy;<script>document.write(new Date().getFullYear());</script> The Dinner Table All rights reserved | Website By <a href="https://tonykidd.com" target="_blank">Kidd Web Design & Development</a>
 			</div>
 		</div>
 	</div>
