--- a/web/contact.html
+++ b/web/contact.html
@@ -97,12 +97,12 @@ Author URL: https://tonykidd.com
 					
       			<div class="company_address">
 				     	<h3>Information :</h3>
-						    	<p>201 Lane Pkwy,</p>
-						   		<p>Shelbyville, TN 37160,</p>
+						    	<p>821 West Church St,</p>
+						   		<p>Lexington, TN 38351,</p>
 						   		<p>USA</p>
-				   		<p>Phone:(931) 684-5663</p>
-				 	 	<p>Email: <span>info@mycompany.com</span></p>
-				   		<p>Follow on: <span>Facebook</span></p>
+				   		<p>Phone:(731) 798-5040</p>
+				 	 	<p>Email: <span><a href="mailto:info@thedinnertablelexingtontn.com">info@thedinnertablelexingtontn.com</a></span></p>
+				   		<p>Follow on: <span><a href="https://www.facebook.com/pages/category/Product-Service/The-Dinner-Table-821-West-Church-St-Lexington-TN-572346636491278/">Facebook</a></span></p>
 				   </div>
 				</div>				
 				<div class="col span_2_of_3">
